# django-aiogram-todo-bot

./: .gitignore  README.md  docker-compose.yml  env.example  pyproject.toml
backend/: Dockerfile  entrypoint.sh  manage.py  pyproject.toml
backend/api/v1/: urls.py
backend/api/v1/categories/: serializers.py  urls.py  views.py
backend/api/v1/tasks/: serializers.py  urls.py  views.py
backend/categories/: admin.py  apps.py  models.py
backend/categories/migrations/: 0001_initial.py
backend/config/: celery.py
backend/config/settings/: base.py  development.py
backend/core/: models.py
backend/core/management/commands/: createadmin.py
backend/tasks/: admin.py  models.py  tasks.py
backend/tasks/management/commands/: setup_periodic_tasks.py
backend/tasks/migrations/: 0001_initial.py
bot/: Dockerfile  api_client.py  config.py  dialogs_registry.py  handlers.py  main.py  pyproject.toml
bot/dialogs/: main_menu.py  states.py  tasks.py
